2/23/11 create and center "Game Over" display at completion of game
2/23/11 add sounds to Game
2/23/11 indicators for 3 game outcomes: balanced, not balanced, balance but not simplified
2/23/11 make smiley face larger in first tab, smaller in Game tab
2/23/11 add smiley/frowny face to Game
2/23/11 disable highlight of arrows, etc. in Game while user is solving a problem
2/23/11 show correct answer in Game
2/23/11 refactor duplicate code in Game canvas
2/23/11 toggle Game coefficients between editable and read-only
2/23/11 partial implementation of game view
2/23/11 first pass at game model, untested and not hooked up to view
2/23/11 change stroke width to 1.5 for bars, arrows, equals sign, balance scale beam (to match look of 0.00.06)
2/23/11 workaround: scale spinners on Mac, set font size for spinners on other platforms
# 0.00.07 (49107) Feb 22, 2011
2/22/11 dev version to demonstrate rescaling of atoms
2/22/11 adjust model-view transform in AtomNode
2/22/11 scale spinners and radio buttons because setFont doesn't work on Mac
2/22/11 change scaling of everything in the view so that canvas transform is not scaling things up, this made molecules look fuzzy
2/22/11 fix test app to use same canvas size as the sim
2/22/11 tweak model-view transform so that 60 of largest atom fit on balance scale's beam
2/22/11 add an equation containing P to dev version of first tab, for testing largest atom size
2/22/11 make balance scale's beam 5% longer
2/22/11 change model-view-transform for atom radius
2/22/11 change diameter to radius in Atom model
2/22/11 improve the look of atom piles on balance scales, make atoms sit directly on top of other atoms instead of floating above 
2/21/11 adjust vertical offset of balance scales so that it works for max situation (60 atoms with diameter of 110pm)
2/21/11 make bars a bit taller
2/21/11 base class for molecules that consist of 3 atoms in a horizontal line
# 0.00.06 (49080) Feb 21, 2011